--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 tokio = { version = "1.17.0", features = ["full"] }
 bytes = "1"
 rand = "0.8.5"
+clap = { version = "3.1.2", features = ["derive"] }
