--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ tokio = { version = "1.17.0", features = ["full"] }
 bytes = "1"
 rand = "0.8.5"
 clap = { version = "3.1.2", features = ["derive"] }
+
+[profile.release]
+debug = true
